# maki

./: .envrc  .gitignore  astro.config.mjs  flake.nix  main.py  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  todo.md  tsconfig.json
public/: style.css
python/: all_mcp_servers.py  all_mcp_servers_shttp.py  core.py  diffusers.py  pydantic_types.py
src/: declarationMerges.d.ts  declarationMerges.ts  server.ts
src/components/: BaklavaContextMenu.vue  BaklavaContextMenuTypes.ts  BaklavaNodeInterface.vue  BaklavaNodePalette.vue  BaklavaPaletteEntry.vue  BaklavaSidebar.vue  Dropdown.vue  NodeGraph.vue
src/lib/: NodePicker.vue  core.ts  css.ts  debounce.ts  jsonSchema.ts  mcpClient.ts  mcpServer.ts  newtype.ts  object.ts  ports.ts  regex.ts  scratchpad.ts  sql.ts  string.ts  type.ts
src/lib/nodes/: aiGeneration.ts  aiGenerationNodes.ts  aiGenerationTypes.ts  allEditorsNeedingDerivedNodes.ts  baklava.ts  core.ts  coreNodes.ts  database.ts  databaseNodes.ts  databaseSqlite.ts  databaseSqliteNodes.ts  derived.ts  derivedNodes.ts  full.ts  fullLocal.ts  fullWeb.ts  interfaceTypes.ts  jsonSchemaNodes.ts  mcp.ts  memoryTransport.ts  node.ts  proceduralAudio.ts  schema.ts  sharedTypes.ts  zodHelpers.ts
src/pages/: index.astro
